# PaymentsIntegration

./: README.md
FreeKassaPlugin/: CMakeLists.txt
FreeKassaPlugin/src/: FreeKassa.cpp  FreeKassa.hpp  FreeKassaPlugin.cpp  FreeKassaPlugin.hpp
FreeKassaPlugin/status/: embedded_page.cpp.in
PaymentsModel/: CMakeLists.txt  arhitect.pu
PaymentsModel/include/: PaymentsModel  PaymentsModel.hpp
PaymentsModel/src/: PaymentsModel.cpp  PaymentsModel.hpp
